2013-05-17  Leo Liu  <sdl.web@gmail.com>

	* subr.el (delete-consecutive-dups): New function.
	* ido.el (ido-set-matches-1): Use it.
	* progmodes/octave.el (inferior-octave-completion-table): Use it.
	* ido.el (ido-remove-consecutive-dups): Remove.

2013-05-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/f90.el (f90-keywords-re, f90-keywords-level-3-re)
	(f90-hpf-keywords-re, f90-constants-re): Use \\_< rather than
	regexp-opt's `words'.

2013-05-16  Leo Liu  <sdl.web@gmail.com>

	* emacs-lisp/smie.el (smie-matching-block-highlight): New face.
	(smie--highlight-matching-block-overlay)
	(smie--highlight-matching-block-lastpos)
	(smie--highlight-matching-block-timer): New variables.
	(smie-highlight-matching-block): New function.
	(smie-highlight-matching-block-mode): New minor mode.  (Bug#14395)
	(smie-setup): Conditionally enable smie-blink-matching-open.

2013-05-16  Wilson Snyder  <wsnyder@wsnyder.org>

	Sync with upstream verilog-mode r840.
	* progmodes/verilog-mode.el (verilog-mode-version)
	(verilog-mode-release-date): Update.
	(verilog-auto-lineup, verilog-auto-reset): Doc fixes.
	(verilog-sig-tieoff): Fix string error on
	AUTORESET with colon define, bug594.  Reported by Andrew Hou.
	(verilog-read-decls): Fix parameters confusing
	AUTOINST interfaces, bug565.  Reported by Leith Johnson.

2013-05-16  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (reveal-filename): New function.

	* loadup.el: Compute Emacs executable versions on MS-Windows,
	where executables have the .exe extension.  Add a hard link
	emacs-XX.YY.ZZ.exe on MS-Windows.

	* Makefile.in (XARGS_LIMIT): New variable.
	(custom-deps, finder-data, autoloads)
	($(MH_E_DIR)/mh-loaddefs.el, $(TRAMP_DIR)/tramp-loaddefs.el)
	($(CAL_DIR)/cal-loaddefs.el, $(CAL_DIR)/diary-loaddefs.el)
	($(CAL_DIR)/hol-loaddefs.el): Use reveal-filename.
	(compile-main): Limit xargs according to $(XARGS_LIMIT).

2013-05-16  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-indent-defun): Mark obsolete.