@@ -1,3 +1,8 @@
+2013-05-17  Jay Belanger  <jay.p.belanger@gmail.com>
+
+	* calc/calc-units.el (math-extract-units): Preserve powers
+	of units.
+
 2013-05-17  Leo Liu  <sdl.web@gmail.com>
 
 	* subr.el (delete-consecutive-dups): New function.
